syntax = "proto3";

package storage;

service StorageService {
  rpc uploadFile(UploadFileRequest) returns (UploadFileResponse);
  rpc readFile(ReadFileRequest) returns (ReadFileResponse);
  rpc deleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc uploadImageChat(UploadFileRequest) returns (UploadFileResponse);
}

message UploadFileRequest {
  string file_name = 1;
  bytes file = 2;
}

message UploadFileResponse {
  string file_name = 1;
  string file_url = 2;
  string message = 3;
}

message ReadFileRequest {
  string file_name = 1;
  string file_path = 2;
}

message ReadFileResponse {
  string file_name = 1;
  string file_content = 2;
  string message = 3;
  string mime_type = 4;
}

message DeleteFileRequest {
  string file_name = 1;
}

message DeleteFileResponse {
  string file_name = 1;
  string message = 2;
}
